# spotify_to_tidal

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  example_config.yml  pyproject.toml  ruff.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  translation.yml
.github/workflows/: backend.yml
scripts/: bump-version.py
src/spotify_to_tidal/: __init__.py  __main__.py  cache.py  sync.py  tidalapi_patch.py
src/totidal_backend/: __main__.py  auth.py  cache.py  sync.py  tidalapi_patch.py
src/totidal_backend/type/: __init__.py  config.py  spotify.py
tests/: conftest.py
tests/unit/: test_adversarial.py  test_auth.py  test_cache.py  test_compat_shim.py  test_cross_language.py
